# Interferometer

./: .git_log_temp.txt  .gitignore  README copy.md  README.md  errors.md  index.html  left.md  michelson_neon_destructive.html  mzi_simulation.html  package-lock.json  package.json  physics_concepts.md  requirements copy.txt  requirements.txt  vite.config.js
docs/adr/: 0001-tech-stack.md
src/: App.jsx  index.css
src/core/: PhysicsRouter.js
src/physics/: advancedInterference.js  basicInterference.js  coherenceModel.js  dataExport.js  detectorModel.js  gaussianBeam.js  gravitationalWave.js  noiseGenerator.js  polarization.js  quantumModel.js  sagnacModel.js  thermalModel.js
src/scene/: BeamSplitter.js  CompensatorPlate.js  DetectorScreen.js  LaserBeam.js  MichelsonScene.jsx  Mirror.js  OpticalTable.js  SagnacScene.jsx  SceneManager.jsx
src/shaders/: fringePattern.frag  fringePattern.vert  volumetricBeam.frag  volumetricBeam.vert
src/store/: simulationStore.js
src/ui/: AnalyticsPanel.jsx  BeginnerPanel.jsx  BottomBar.jsx  FringeExtrapolation.jsx  LabPage.jsx  ModeToggle.jsx  PhysicsNoisePanel.jsx  QuantumPanel.jsx  ResearchPanel.jsx  Sidebar.jsx
v3/: simulab_prd_technical_specs.html
v3/stitch/analytics_research_data_export/: code.html
v3/stitch/astronomical_gravitational_analytics/: code.html
v3/stitch/main_research_simulab_view/: code.html
v3/stitch/unified_beginner_mode/: code.html
wasm/: CMakeLists.txt
wasm/src/: CoherenceModel.cpp  CoherenceModel.h  GaussianBeam.cpp  GaussianBeam.h  InterferometerEngine.cpp  NoiseGenerator.cpp  NoiseGenerator.h
(+6 files in other folders)
